modules/networking/main.tf
# VPC

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true


  tags = {
    Name = "${var.project_name}-vpc"
  }
}


# Internet Gateway

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id


  tags = {
    Name = "${var.project_name}-igw"
  }
}


# Public Subnets

resource "aws_subnet" "public" {


  count = length(var.public_subnets)


  vpc_id = aws_vpc.main.id


  cidr_block = var.public_subnets[count.index]


  availability_zone = var.availability_zones[count.index]


  map_public_ip_on_launch = true


  tags = {

    Name = "${var.project_name}-public-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"

  }
}


# Private Subnets

resource "aws_subnet" "private" {


  count = length(var.private_subnets)


  vpc_id = aws_vpc.main.id


  cidr_block = var.private_subnets[count.index]


  availability_zone = var.availability_zones[count.index]


  tags = {

    Name = "${var.project_name}-private-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"

  }
}



# Elastic IP

resource "aws_eip" "nat" {

  domain = "vpc"


  tags = {

    Name = "${var.project_name}-nat-eip"

  }

}



# NAT Gateway

resource "aws_nat_gateway" "nat" {


  allocation_id = aws_eip.nat.id


  subnet_id = aws_subnet.public[0].id


  depends_on = [aws_internet_gateway.igw]


  tags = {

    Name = "${var.project_name}-nat"

  }

}

# Public Route Table

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }


  tags = {

    Name = "${var.project_name}-public-rt"

  }

}


# Public Route Table Association

resource "aws_route_table_association" "public" {


  count = length(aws_subnet.public)


  subnet_id = aws_subnet.public[count.index].id


  route_table_id = aws_route_table.public.id

}



# Private Route Table

resource "aws_route_table" "private" {


  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat.id

  }


  tags = {

    Name = "${var.project_name}-private-rt"

  }

}



# Private Route Table Association

resource "aws_route_table_association" "private" {


  count = length(aws_subnet.private)


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private.id

}
